5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1590_1017.log
== SUBMITION (2019-04-08 13:34:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("logitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))
d = 6371.01 * acos(sin(t1)*sin(t2)+cos(t1*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- EXECUTION TIME:
0.169878
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 10
    print(round(d, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:35:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("logitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))
d = 6371.01 * acos(sin(t1)*sin(t2)+cos(t1*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 10
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:35:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("logitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))
d = 6371.01 * acos(sin(t1)*sin(t2)+cos(t1*cos(t2)*cos(g1-g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 10
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:35:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("logitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))
d = 6371.01 * acos(sin(t1)*sin(t2)+cos(t1*cos(t2)*cos(g1-g2))
print(round(d,2))
-- ERROR:
File "XXXX", line 10
    print(round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:35:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("logitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))
d = 6371.01 * acos(sin(t1)*sin(t2)+cos(t1*cos(t2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.154836
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 10
    print(round(d,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:35:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("logitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))
d = 6371.01 * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:35:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("logitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))
d = 6371.01 * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.202468
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
